--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+
 *,
 *::after,
 *::before {
@@ -181,7 +182,7 @@ textarea {
   @media only screen and (max-width: 37.5em) {
     .home-hero {
       height: unset;
-      min-height: unset; } 
+      min-height: unset; } }
   .home-hero__socials {
     position: absolute;
     top: 50%;
