--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ textarea {
     top: calc(100% + 1.5rem);
     height: 5px;
     width: 3rem;
-    background: #0062b9;
+    background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
     left: 50%;
     transform: translateX(-50%);
     border-radius: 5px; }
@@ -173,7 +173,7 @@ textarea {
 
 .home-hero {
   color: #fff;
-  background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)), url(../../assets/svg/common-bg.svg);
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
   background-position: center;
   height: 100vh;
   min-height: 80rem;
@@ -311,7 +311,7 @@ textarea {
           font-size: 1.7rem; } }
 
 .contact {
-  background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)), url(../../assets/svg/common-bg.svg);
+ background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
   background-size: cover;
   background-position: center; }
   .contact__form-container {
@@ -690,3 +690,5 @@ textarea {
   to {
     opacity: 0;
     top: 27px; } 
+
+
