--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
 
 /* Style adjustments for your content */
 .background-section h1 {
-  color: #fff;
+  color: #000000;
   text-align: center;
   margin-top: 50px;
 }
