--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ textarea {
 .heading-primary {
   font-size: 6rem;
   text-transform: uppercase;
-  colour:white;
+  color: #FFFFFF;
   letter-spacing: 3px;
   text-align: center; }
   @media only screen and (max-width: 37.5em) {
