--- a/main.css
+++ b/main.css
@@ -177,7 +177,7 @@ img {
 }
 
 html {
-	background-color: #fff;
+	background-color: #000000; /*edited here*/
 	font-size: 16px;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
