--- a/main.css
+++ b/main.css
@@ -484,7 +484,7 @@ a.box:active {
 }
 
 .button.is-primary {
-	background-color: #6e07f3;
+	background-color: #184080;
 	border-color: transparent;
 	color: #fff
 }
@@ -511,29 +511,29 @@ a.box:active {
 }
 
 .button.is-primary[disabled] {
-	background-color: #6e07f3;
-	border-color: #6e07f3;
+	background-color: #184080;
+	border-color: #184080;
 	box-shadow: none
 }
 
 .button.is-primary.is-outlined {
 	background-color: transparent;
-	border-color: #6e07f3;
-	color: #6e07f3
+	border-color: #184080;
+	color: #184080
 }
 
 .button.is-primary.is-outlined:focus,
 .button.is-primary.is-outlined:hover {
-	background-color: #6e07f3;
-	border-color: #6e07f3;
+	background-color: #184080;
+	border-color: #184080;
 	color: #fff
 }
 
 .button.is-primary.is-outlined[disabled] {
 	background-color: transparent;
-	border-color: #6e07f3;
+	border-color: #184080;
 	box-shadow: none;
-	color: #6e07f3
+	color: #184080
 }
 
 .button.is-primary.is-light {
@@ -1250,7 +1250,7 @@ div.icon-text {
 }
 
 .tag:not(body).is-primary {
-	background-color: #6e07f3;
+	background-color: #184080;
 	color: #fff
 }
 
@@ -1649,12 +1649,12 @@ print {
 }
 
 .message.is-primary .message-header {
-	background-color: #6e07f3;
+	background-color: #184080;
 	color: #fff
 }
 
 .message.is-primary .message-body {
-	border-color: #6e07f3;
+	border-color: #184080;
 	color: #730cf8
 }
 
@@ -2390,7 +2390,7 @@ a.has-text-light:hover {
 }
 
 .has-text-primary {
-	color: #6e07f3 !important
+	color: #184080 !important
 }
 
 a.has-text-primary:focus,
@@ -2399,7 +2399,7 @@ a.has-text-primary:hover {
 }
 
 .has-background-primary {
-	background-color: #6e07f3 !important
+	background-color: #184080 !important
 }
 
 .has-text-primary-light {
@@ -3001,7 +3001,7 @@ print {
 }
 
 .hero.is-primary {
-	background-color: #6e07f3;
+	background-color: #184080;
 	color: #fff
 }
 
@@ -3024,7 +3024,7 @@ print {
 }
 
 .hero.is-primary.is-bold {
-	background-image: linear-gradient(141deg, #3600c7 0, #6e07f3 71%, #a215fe 100%)
+	background-image: linear-gradient(141deg, #3600c7 0, #184080 71%, #a215fe 100%)
 }
 
 .hero.is-link {
@@ -3288,7 +3288,7 @@ a:hover {
 }
 
 .section.is-primary {
-	background-color: #6e07f3;
+	background-color: #184080;
 	color: #fff
 }
 
